# model/postgres/aws/postgres_resource.rb
@@ -18,6 +18,14 @@ class PostgresResource < Sequel::Model
       Option::AWS_STORAGE_SIZE_OPTIONS[family][vcpu_count]
     end
 
+    def self.network_volume_types(location)
+      PostgresResource.priced_network_volume_types(location, [NetworkVolumeType::GP3, NetworkVolumeType::IO2])
+    end
+
+    def self.default_network_volume_type(_location)
+      NetworkVolumeType::GP3
+    end
+
     private
 
     def aws_boot_image(pg_version, arch)
