# prog/postgres/postgres_resource_nexus.rb
@@ -16,7 +16,10 @@ class Prog::Postgres::PostgresResourceNexus < Prog::Base
 
   def self.assemble(project_id:, location_id:, name:, target_vm_size:, target_storage_size_gib:,
     target_version: nil, flavor: PostgresResource::Flavor::STANDARD,
-    ha_type: PostgresResource::HaType::NONE, parent_id: nil, tags: [], restore_target: nil, with_firewall_rules: true,
+    ha_type: PostgresResource::HaType::NONE, storage_type: PostgresResource::StorageType::INSTANCE_STORAGE,
+    network_volume_type: nil,
+    network_volume_iops: nil, network_volume_throughput_mibps: nil,
+    parent_id: nil, tags: [], restore_target: nil, with_firewall_rules: true,
     user_config: {}, pgbouncer_user_config: {}, private_subnet_name: nil, init_script: nil,
     hostname_version: Config.postgres_hostname_version_default, restore_from_timeline_id: nil)
 
@@ -96,10 +99,21 @@ class Prog::Postgres::PostgresResourceNexus < Prog::Base
       end
       postgres_resource_id ||= PostgresResource.generate_uuid
 
+      network_volume_type ||= PostgresResource.default_network_volume_type(location) if storage_type == PostgresResource::StorageType::NETWORK_CACHE
+
+      unless storage_type == PostgresResource::StorageType::NETWORK_CACHE
+        network_volume_iops = network_volume_throughput_mibps = nil
+      end
+
+      if network_volume_type
+        Validation.validate_network_volume_config(network_volume_type, target_storage_size_gib, network_volume_iops, network_volume_throughput_mibps)
+      end
+
       postgres_resource = PostgresResource.create_with_id(postgres_resource_id,
         project_id:, location_id: location.id, name:,
         target_vm_size:, target_storage_size_gib:, server_cert:, server_cert_key:,
-        superuser_password:, ha_type:, target_version:, flavor:, parent_id:, tags:, restore_target:, hostname_version:, user_config:, pgbouncer_user_config:)
+        superuser_password:, ha_type:, storage_type:, network_volume_type:,
+        target_version:, flavor:, parent_id:, tags:, restore_target:, hostname_version:, user_config:, pgbouncer_user_config:)
 
       if need_initial_cert_id
         strand_frame["current_cert_id"] = strand_frame["initial_cert_id"] = Prog::Vnet::CertNexus.assemble(
@@ -132,7 +146,11 @@ class Prog::Postgres::PostgresResourceNexus < Prog::Base
         ])
       end
 
-      Prog::Postgres::PostgresServerNexus.assemble(resource_id: postgres_resource.id, timeline_id:, timeline_access:, is_representative: true)
+      # Seed the initial volume rows with request config.
+      storage_config = {
+        network_volume: {provisioned_iops: network_volume_iops, provisioned_throughput_mibps: network_volume_throughput_mibps},
+      }
+      Prog::Postgres::PostgresServerNexus.assemble(resource_id: postgres_resource.id, timeline_id:, timeline_access:, is_representative: true, storage_config:)
 
       strand = Strand.create_with_id(postgres_resource, prog: "Postgres::PostgresResourceNexus", label: "start", **strand_args)
 
@@ -385,13 +403,15 @@ class Prog::Postgres::PostgresResourceNexus < Prog::Base
       vcpu_count = current_vm_size.vcpu_count
       storage_size_gib = representative_server.storage_size_gib
       location = postgres_resource.location
+      storage_family = postgres_resource.storage_billing_family
 
       new_billing_records = postgres_resource.target_server_count.times.flat_map do |index|
         resource_type, slot_prefix, slot_suffix = index.zero? ? ["", "primary", ""] : ["Standby", "standby", "-#{index - 1}"]
-        [
+        records = [
           {billing_rate_id: BillingRate.from_resource_properties("Postgres#{resource_type}VCpu", "#{flavor}-#{vm_family}", location.name, location.byoc)["id"], amount: vcpu_count, slot: "#{slot_prefix}-vcpu#{slot_suffix}"},
-          {billing_rate_id: BillingRate.from_resource_properties("Postgres#{resource_type}Storage", flavor, location.name, location.byoc)["id"], amount: storage_size_gib, slot: "#{slot_prefix}-storage#{slot_suffix}"},
+          {billing_rate_id: BillingRate.from_resource_properties("Postgres#{resource_type}Storage", storage_family, location.name, location.byoc)["id"], amount: storage_size_gib, slot: "#{slot_prefix}-storage#{slot_suffix}"},
         ]
+        records
       end
 
       existing_billing_records = postgres_resource.active_billing_records.map do |br|
