# serializers/postgres.rb
@@ -31,6 +31,10 @@ class Serializers::Postgres < Serializers::Base
 
     if options[:detailed]
       base.merge!(
+        storage_type: pg.storage_type,
+        network_volume_type: pg.network_volume_type,
+        network_volume_iops: pg.network_volume_iops,
+        network_volume_throughput_mibps: pg.network_volume_throughput_mibps,
         connection_string: pg.connection_string,
         private_connection_string: pg.private_connection_string,
         username: "postgres",
@@ -45,7 +49,7 @@ class Serializers::Postgres < Serializers::Base
 
       if pg.timeline && pg.representative_server.primary?
         begin
-          base[:earliest_restore_time] = pg.timeline.earliest_restore_time&.utc&.iso8601
+          base[:earliest_restore_time] = PostgresTimeline.earliest_restore_time(pg.timeline)&.utc&.iso8601
         rescue => ex
           Clog.emit("Failed to get earliest restore time", Util.exception_to_hash(ex))
         end
